--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.3.5"
   }
 }
